examples/test/testpolicy4994.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4994
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key6: value33
      key32: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value40
          key6: value30
          key24: value11
      podSelector:
        matchLabels:
          key12: value6
          key42: value14
